Exported language files

--- a/src/main/resources/assets/hardcoreenderexpansion/lang/cs_CZ.lang
+++ b/src/main/resources/assets/hardcoreenderexpansion/lang/cs_CZ.lang
@@ -1,3 +1,4 @@
+# DO NOT MODIFY THIS FILE!
 tile.obsidianEnd.name=Obsidián
 tile.obsidianStairs.name=Obsidiánové schody
 tile.obsidianSpecial.smooth.name=Hladký obsidián
@@ -87,7 +88,6 @@ challenge.title=Výzva:
 challenge.difficulty.hard=Těžká obtížnost
 challenge.difficulty.mediumorhard=Normální / těžká obtížnost
 item.enderCompendium.name=Encyklopedie Endu
-item.knowledgeFragment.name=Úlomek vědění
 tile.decompositionTable.name=Oltář rozložení
 tile.energyExtractionTable.name=Oltář oddělení Energie
 tile.ravagedBrick.name=Zpustošené cihly
@@ -117,7 +117,7 @@ achievement.learningThePowers.desc=Vytvoř Oltář dračí esence
 item.endermanRelicShattered.name=Shattered Enderman Relic
 container.endPowderEnhancements=End Powder Enhancements
 achievement.theMoreYouKnow=The more you know
-achievement.theMoreYouKnow.desc=Craft an Ender Compendium
+achievement.theMoreYouKnow.desc=Press '%1$s' to open Ender Compendium
 tile.crossedDecoration.violetMoss.tall.name=Tall Violet Moss
 tile.crossedDecoration.violetMoss.moderate.name=Moderate Violet Moss
 tile.crossedDecoration.violetMoss.short.name=Short Violet Moss
@@ -187,3 +187,20 @@ item.charm.voidrescue.tooltip=
 item.charm.slaughterimpact.tooltip=$0 damage dealt in $1 radius on kill
 item.charm.cannotstack=This charm will not stack effects with other charms of this type!
 entity.hauntedMiner.name=Haunted Miner
+tile.voidChest.name=Void Chest
+tile.endiumOre.name=Ložisko Endia
+tile.endiumBlock.name=Blok z Endia
+tile.persegrit.name=Persegrit
+tile.laboratoryGlass.name=Laboratory Glass
+item.endiumIngot.name=Endium Ingot
+item.knowledgeNote.name=Knowledge Note
+entity.homelandEnderman.name=Homeland Enderman
+energy.overlay.title=ENERGY CLUSTER
+energy.overlay.holding=HOLDING $ ENERGY
+energy.overlay.regen=REGENERATING UP TO $
+energy.status.healthy=HEALTHY
+energy.status.weakened=WEAKENED
+energy.status.tired=TIRED
+energy.status.unstable=UNSTABLE
+container.voidChest=Void Chest
+key.openCompendium=Ender Compendium
