--- a/src/main/resources/assets/hardcoreenderexpansion/lang/de_DE.lang
+++ b/src/main/resources/assets/hardcoreenderexpansion/lang/de_DE.lang
@@ -1,3 +1,4 @@
+# DO NOT MODIFY THIS FILE!
 tile.obsidianEnd.name=Fallendes Obsidian
 tile.obsidianStairs.name=Obsidiantreppe
 tile.obsidianSpecial.smooth.name=Glattes Obsidian
@@ -87,7 +88,6 @@ challenge.title=Herausforderung:
 challenge.difficulty.hard=Schwierigkeit: Hart
 challenge.difficulty.mediumorhard=Schwierigkeit: Normal/Hart
 item.enderCompendium.name=Enderhandbuch
-item.knowledgeFragment.name=Wissensfragment
 tile.decompositionTable.name=Zersetzungstisch
 tile.energyExtractionTable.name=Energieentzugstisch
 tile.ravagedBrick.name=Zerstörte Ziegel
@@ -187,3 +187,20 @@ item.charm.voidrescue.tooltip=
 item.charm.slaughterimpact.tooltip=&0 Schaden in einem $1-Blöcke Radius der Tötung ausgeteilt
 item.charm.cannotstack=Dieses Amulett wird seine Effekte nicht mit\nanderen Amuletten des gleichen Typs stacken!
 entity.hauntedMiner.name=Verhexter Minenarbeiter
+tile.voidChest.name=Void Chest
+tile.endiumOre.name=Endium Ore
+tile.endiumBlock.name=Endium Block
+tile.persegrit.name=Persegrit
+tile.laboratoryGlass.name=Laboratory Glass
+item.endiumIngot.name=Endium Ingot
+item.knowledgeNote.name=Knowledge Note
+entity.homelandEnderman.name=Homeland Enderman
+energy.overlay.title=ENERGY CLUSTER
+energy.overlay.holding=HOLDING $ ENERGY
+energy.overlay.regen=REGENERATING UP TO $
+energy.status.healthy=HEALTHY
+energy.status.weakened=WEAKENED
+energy.status.tired=TIRED
+energy.status.unstable=UNSTABLE
+container.voidChest=Void Chest
+key.openCompendium=Ender Compendium
