--- a/src/main/resources/assets/hardcoreenderexpansion/lang/es_ES.lang
+++ b/src/main/resources/assets/hardcoreenderexpansion/lang/es_ES.lang
@@ -1,3 +1,4 @@
+# DO NOT MODIFY THIS FILE!
 tile.obsidianEnd.name=Obsidiana que cae
 tile.obsidianStairs.name=Escaleras de obsidiana
 tile.obsidianSpecial.smooth.name=Obsidiana lisa
@@ -87,7 +88,6 @@ challenge.title=Reto:
 challenge.difficulty.hard=Dificultad extrema
 challenge.difficulty.mediumorhard=Dificultad normal / extrema
 item.enderCompendium.name=Compendio de El Fin
-item.knowledgeFragment.name=Fragmento del conocimiento
 tile.decompositionTable.name=Mesa de la descomposición
 tile.energyExtractionTable.name=Mesa de extracción de energía
 tile.ravagedBrick.name=Ladrillos devastados
@@ -187,3 +187,20 @@ item.charm.voidrescue.tooltip=
 item.charm.slaughterimpact.tooltip=$0 damage dealt in $1 radius on kill
 item.charm.cannotstack=This charm will not stack effects with other charms of this type!
 entity.hauntedMiner.name=Haunted Miner
+tile.voidChest.name=Void Chest
+tile.endiumOre.name=Endium Ore
+tile.endiumBlock.name=Endium Block
+tile.persegrit.name=Persegrit
+tile.laboratoryGlass.name=Laboratory Glass
+item.endiumIngot.name=Endium Ingot
+item.knowledgeNote.name=Knowledge Note
+entity.homelandEnderman.name=Homeland Enderman
+energy.overlay.title=ENERGY CLUSTER
+energy.overlay.holding=HOLDING $ ENERGY
+energy.overlay.regen=REGENERATING UP TO $
+energy.status.healthy=HEALTHY
+energy.status.weakened=WEAKENED
+energy.status.tired=TIRED
+energy.status.unstable=UNSTABLE
+container.voidChest=Void Chest
+key.openCompendium=Ender Compendium
