--- a/src/main/resources/assets/hardcoreenderexpansion/lang/fr_FR.lang
+++ b/src/main/resources/assets/hardcoreenderexpansion/lang/fr_FR.lang
@@ -1,3 +1,4 @@
+# DO NOT MODIFY THIS FILE!
 tile.obsidianEnd.name=Obsidienne qui tombe
 tile.obsidianStairs.name=Escaliers en obsidienne
 tile.obsidianSpecial.smooth.name=Obsidienne lisse
@@ -87,7 +88,6 @@ challenge.title=Défi:
 challenge.difficulty.hard=Difficile
 challenge.difficulty.mediumorhard=Normal / Difficile
 item.enderCompendium.name=Compendium du Néant
-item.knowledgeFragment.name=Fragment de connaissance
 tile.decompositionTable.name=Table de décomposition
 tile.energyExtractionTable.name=Table d'extraction d'Énergie
 tile.ravagedBrick.name=Brique ravagée
@@ -187,3 +187,20 @@ item.charm.voidrescue.tooltip=
 item.charm.slaughterimpact.tooltip=$0 damage dealt in $1 radius on kill
 item.charm.cannotstack=This charm will not stack effects with other charms of this type!
 entity.hauntedMiner.name=Haunted Miner
+tile.voidChest.name=Void Chest
+tile.endiumOre.name=Endium Ore
+tile.endiumBlock.name=Endium Block
+tile.persegrit.name=Persegrit
+tile.laboratoryGlass.name=Laboratory Glass
+item.endiumIngot.name=Endium Ingot
+item.knowledgeNote.name=Knowledge Note
+entity.homelandEnderman.name=Homeland Enderman
+energy.overlay.title=ENERGY CLUSTER
+energy.overlay.holding=HOLDING $ ENERGY
+energy.overlay.regen=REGENERATING UP TO $
+energy.status.healthy=HEALTHY
+energy.status.weakened=WEAKENED
+energy.status.tired=TIRED
+energy.status.unstable=UNSTABLE
+container.voidChest=Void Chest
+key.openCompendium=Ender Compendium
