--- a/src/main/resources/assets/hardcoreenderexpansion/lang/nl_NL.lang
+++ b/src/main/resources/assets/hardcoreenderexpansion/lang/nl_NL.lang
@@ -1,3 +1,4 @@
+# DO NOT MODIFY THIS FILE!
 tile.obsidianEnd.name=Vallend Obsidiaan
 tile.obsidianStairs.name=Obsidiaantrap
 tile.obsidianSpecial.smooth.name=Glad Obsidiaan
@@ -6,14 +7,14 @@ tile.obsidianSpecial.pillar.name=Obsidianen Pillaar
 tile.obsidianSpecialGlowing.smooth.name=Glad Gloeiend Obsidiaan
 tile.obsidianSpecialGlowing.chiseled.name=Gebeiteld Gloeiend Obsidiaan
 tile.obsidianSpecialGlowing.pillar.name=Gloeiend Obsidianen Pillaar
-tile.essenceAltar.basic.name=Standaard Extract Altaar
-tile.essenceAltar.dragon.name=Drakenextract Altaar
-tile.essenceAltar.fiery.name=Vurig Extract Altaar
-tile.essenceAltar.spectral.name=Spookachtig Extract Altaar
+tile.essenceAltar.basic.name=Standaard Extractaltaar
+tile.essenceAltar.dragon.name=Drakenextractaltaar
+tile.essenceAltar.fiery.name=Vurig Extractaltaar
+tile.essenceAltar.spectral.name=Spookachtig Extractaltaar
 tile.endPowderOre.name=Endpoedererts
 tile.stardustOre.name=Sterrenstoferts
-tile.igneousRockOre.name=Vuurspuwende Steenerts
-tile.instabilityOrbOre.name=Onstabiele Parelerts
+tile.igneousRockOre.name=Vuurspuwend Steenerts
+tile.instabilityOrbOre.name=Onstabiel Parelerts
 tile.enderGoo.name=Enderdrab
 tile.endStoneTerrain.infested.name=Besmette Endsteen
 tile.endStoneTerrain.burned.name=Verbrand Endsteen
@@ -45,13 +46,13 @@ item.igneousRock.name=Vuurspuwende Steen
 item.instabilityOrb.name=Onstabiele Parel
 item.potionOfInstability.name=Toverdrank der Instabiliteit
 item.potionOfInstability.splash.name=Spattende Toverdrank der Instabiliteit
-item.transferenceGem.name=Overdrachtsedelsteen
-item.templeCaller.name=Tempelaanvrager
+item.transferenceGem.name=Overdrachtsjuweel
+item.templeCaller.name=Tempeloproeper
 item.silverfishBlood.name=Zilvervisjesbloed
 item.drySplinter.name=Uitgedroogde Splinter
 item.infestationRemedy.name=Besmettingstegengif
 item.ghostAmulet.name=Spokenamulet
-item.endoplasm.name=Endoplasma
+item.endoplasm.name=Ectoplasma
 item.corporealMirageOrb.name=Lichamelijke Luchtspiegelingsparel
 item.endermanRelicRepaired.name=Endermanreliek
 item.bucketEnderGoo.name=Emmer met Enderdrab
@@ -65,7 +66,7 @@ entity.fireFiend.name=Vuurduivel
 entity.enderDemon.name=Enderdemon
 entity.angryEnderman.name=Furieuze Enderman
 entity.babyEnderman.name=Babyenderman
-entity.brainlessEnderman.name=Hersenloze Enderman
+entity.brainlessEnderman.name=Verstijfde Enderman
 entity.enderGuardian.name=Endergardiaan
 entity.vampireBat.name=Vampiervleermuis
 entity.infestedBat.name=Besmette Vleermuis
@@ -73,117 +74,133 @@ entity.forestGhost.name=Spook
 entity.fireGolem.name=Vuurgolem
 entity.scorchingLens.name=Verschroeiende Lens
 namegenerator.middle=, de
-achievement.magicOfDecomposition.desc=Acquire some Stardust
+achievement.magicOfDecomposition.desc=Bemachtig wat Sterrenstof
 challenge.hard0Deaths=Hardcore Speler
 challenge.hard0Deaths.desc=Dood de draak zonder zelf te sterven
 challenge.bedExplode=Slapeloos
 challenge.bedExplode.desc=Lever de genadeslag met een beddenexplosie
 challenge.noEnderman=Enderliefhebber
 challenge.noEnderman.desc=Dood geen enkele Enderman tijdens het gevecht
-achievement.learningThePowers=Learning the powers
-achievement.newAdventures.desc=Welcome to Hardcore Ender Expansion!
-achievement.newAdventures=Time for new adventures!
+achievement.learningThePowers=Leer de krachten
+achievement.newAdventures.desc=Welkom bij de Hardcore Enderexpansie!
+achievement.newAdventures=Tijd voor nieuwe avonturen!
 challenge.title=Uitdaging:
 challenge.difficulty.hard=Moeilijke moeilijkheidsgraad
-challenge.difficulty.mediumorhard=Normaal/Moeilikke moeilijkheidsgraad
+challenge.difficulty.mediumorhard=Normaal/Moeilijke moeilijkheidsgraad
 item.enderCompendium.name=Ender Compendium
-item.knowledgeFragment.name=Knowledge Fragment
-tile.decompositionTable.name=Decomposition Table
-tile.energyExtractionTable.name=Energy Extraction Table
-tile.ravagedBrick.name=Ravaged Brick
-tile.energyCluster.name=Energy Cluster
-item.spectralWand.name=Spectral Wand
-container.enhancedBrewing=Enhanced Brewing Stand
-container.decompositionTable=Decomposition Table
-container.energyExtractionTable=Energy Extraction Table
-tile.sphalerite.name=Sphalerite
-tile.sphalerite.stardust.name=Sphalerite with Stardust
-item.spatialDashGem.name=Spatial Dash Gem
-item.biomeCompass.name=Biome Compass
-achievement.magicOfDecomposition=The magic of decomposition
-achievement.wholeNewCultures.desc=Visit a Biome Island
-achievement.wholeNewCultures=Whole new cultures!
-achievement.thatWasClose.desc=Save yourself from falling into the void
-achievement.thatWasClose=That was close!
-achievement.deadVisionary.desc=Kill an Ender Eye to get Spatial Dash Gem
-achievement.deadVisionary=Dead visionary
-achievement.superShiny.desc=Enhance and Ender Pearl with all possible items
-achievement.superShiny=Super shiny!
-achievement.traveling101.desc=Enhance an Ender Pearl
-achievement.traveling101=Traveling 101
-achievement.rebirth.desc=Use the Temple Caller and regenerate the End
-achievement.rebirth=Rebirth
-achievement.learningThePowers.desc=Create a Dragon Essence Altar
-item.endermanRelicShattered.name=Shattered Enderman Relic
-container.endPowderEnhancements=End Powder Enhancements
-achievement.theMoreYouKnow=The more you know
-achievement.theMoreYouKnow.desc=Craft an Ender Compendium
-tile.crossedDecoration.violetMoss.tall.name=Tall Violet Moss
-tile.crossedDecoration.violetMoss.moderate.name=Moderate Violet Moss
-tile.crossedDecoration.violetMoss.short.name=Short Violet Moss
-tile.ravagedBrickSmooth.name=Smooth Ravaged Brick
-tile.ravagedBrickGlow.name=Glowing Ravaged Brick
-tile.ravagedBrickSlab.name=Ravaged Brick Slab
-tile.ravagedBrickStairs.name=Ravaged Brick Stairs
-tile.ravagedBrickFence.name=Ravaged Brick Fence
-tile.cinder.name=Cinder
-item.scorchingPickaxe.name=Scorching Pickaxe
-item.charmPouch.name=Charm Pouch
-item.rune.power.name=Rune of Power
-item.rune.agility.name=Rune of Agility
-item.rune.vigor.name=Rune of Vigor
-item.rune.defense.name=Rune of Defense
-item.rune.magic.name=Rune of Magic
-item.rune.void.name=Rune of Void
-item.charm.basicpower.name=Charm of Power
-item.charm.basicagility.name=Charm of Agility
-item.charm.basicvigor.name=Charm of Vigor
-item.charm.basicdefense.name=Charm of Defense
-item.charm.basicmagic.name=Charm of Magic
-item.charm.equality.name=Charm of Equality
-item.charm.blocking.name=Charm of Blocking
-item.charm.blockingreflection.name=Charm of Blocking Reflection
-item.charm.digestiverecover.name=Charm of Digestive Recover
-item.charm.lifesteal.name=Charm of Life Steal
-item.charm.damageredirection.name=Charm of Damage Redirection
-item.charm.magicpenetration.name=Charm of Magic Penetration
-item.charm.witcheryharm.name=Charm of Witchery Harm
-item.charm.witcherydefense.name=Charm of Witchery Defense
-item.charm.fallingprotection.name=Charm of Falling Protection
-item.charm.haste.name=Charm of Haste
-item.charm.criticalstrike.name=Charm of Critical Strike
-item.charm.seconddurability.name=Charm of Second Durability
-item.charm.voidrescue.name=Charm of Void Rescue
-item.charm.slaughterimpact.name=Charm of Slaughter Impact
-item.charm.lastresort.tooltip=Teleports $0 blocks away from finishing hit with cooldown of $1 seconds
-item.charm.lastresort.name=Charm of Last Resort
-item.charm.magicdefense.tooltip=-$0 magic damage taken
-item.charm.magicdefense.name=Charm of Magic Defense
-entity.louse.name=Louse
-container.charmPouch=Charm Pouch
-container.runeCrafting=Rune Crafting
-item.charm.blockingrepulsion.tooltip=-$0 damage taken and $1x knockback repulsed
-item.charm.blockingrepulsion.name=Charm of Blocking Repulsion
-item.fireShard.name=Fire Shard
-item.charm.basicpower.tooltip=+$0 damage
-item.charm.basicagility.tooltip=+$0 speed
-item.charm.basicvigor.tooltip=+$0 health regeneration speed
-item.charm.basicdefense.tooltip=-$0 damage taken
-item.charm.basicmagic.tooltip=+$0 experience
-item.charm.equality.tooltip=+$0 damage\n+$1 speed\n+$2 health regeneration speed\n-$3 damage taken\n+$4 experience
-item.charm.blocking.tooltip=-$0 damage taken when blocking
-item.charm.blockingreflection.tooltip=-$0 damage taken and $1 reflected when blocking
-item.charm.digestiverecover.tooltip=$0 health per 1 hunger bar
-item.charm.lifesteal.tooltip=$0 health gained per $1 health dealt
-item.charm.damageredirection.tooltip=$0 damage redirected to $1 nearby creature(s)
-item.charm.magicpenetration.tooltip=$0 of dealt damage penetrates armor using magic
-item.charm.witcheryharm.tooltip=$0 chance to cause level $1 effect for $2 seconds
+tile.decompositionTable.name=Decompositietafel
+tile.energyExtractionTable.name=Energieëxtractietafel
+tile.ravagedBrick.name=Geteisterde Blokstenen
+tile.energyCluster.name=Energiecluster
+item.spectralWand.name=Spookachtige Toverstaf
+container.enhancedBrewing=Verbeterde Brouwstandaard
+container.decompositionTable=Decompositietafel
+container.energyExtractionTable=Energieëxtractietafel
+tile.sphalerite.name=Sfaleriet
+tile.sphalerite.stardust.name=Sfaleriet met Sterrenstof
+item.spatialDashGem.name=Ruimtescheutjuweel
+item.biomeCompass.name=Eilandskompas
+achievement.magicOfDecomposition=De magie van decompositie
+achievement.wholeNewCultures.desc=Bezoek een Gebiedseiland
+achievement.wholeNewCultures=Totaal nieuwe culturen!
+achievement.thatWasClose.desc=Red jezelf van een val in de eindeloze leegte
+achievement.thatWasClose=Dat was op het nippertje!
+achievement.deadVisionary.desc=Doodt een Enderoog om een Ruimtescheutjuweel te bemachtigen
+achievement.deadVisionary=Dode Visionare
+achievement.superShiny.desc=Verbeter een Enderparel met alle mogelijke items
+achievement.superShiny=Superglimmend!
+achievement.traveling101.desc=Verbeter een Enderparel
+achievement.traveling101=Reizen 101
+achievement.rebirth.desc=Gebruik een Tempeloproeper en regenereer de End
+achievement.rebirth=Hergeboorte
+achievement.learningThePowers.desc=Creëer een Drakenessentie Altaar
+item.endermanRelicShattered.name=Verbrijzelde Endermanreliek
+container.endPowderEnhancements=Endpoeder Verbeteren
+achievement.theMoreYouKnow=Hoe meer je weet
+achievement.theMoreYouKnow.desc=Stel een Endercompendium samen
+tile.crossedDecoration.violetMoss.tall.name=Hoog Violetmos
+tile.crossedDecoration.violetMoss.moderate.name=Middelmatig Violetmos
+tile.crossedDecoration.violetMoss.short.name=Kort Violetmos
+tile.ravagedBrickSmooth.name=Gladde Geteisterde Blokstenen
+tile.ravagedBrickGlow.name=Gloeiende Geteisterde Blokstenen
+tile.ravagedBrickSlab.name=Geteisterd Blokstenen Plaat
+tile.ravagedBrickStairs.name=Geteisterde Blokstenen Treden
+tile.ravagedBrickFence.name=Geteisterde Blokstenen Hek
+tile.cinder.name=Sintel
+item.scorchingPickaxe.name=Verschroeiende Pikhouweel
+item.charmPouch.name=Amuletsbuidel
+item.rune.power.name=Rune van Kracht
+item.rune.agility.name=Rune van Behendigheid
+item.rune.vigor.name=Rune van Herstel
+item.rune.defense.name=Rune van Bestendigheid
+item.rune.magic.name=Rune van Magie
+item.rune.void.name=Rune van Leegte
+item.charm.basicpower.name=Amulet van Kracht
+item.charm.basicagility.name=Amulet van Behendigheid
+item.charm.basicvigor.name=Amulet van Herstel
+item.charm.basicdefense.name=Amulet van Bestendigheid
+item.charm.basicmagic.name=Amulet van Magie
+item.charm.equality.name=Amulet van Gelijkheid
+item.charm.blocking.name=Amulet van Pareren
+item.charm.blockingreflection.name=Amulet van Tegenaanval
+item.charm.digestiverecover.name=Amulet van Verterend Herstel
+item.charm.lifesteal.name=Amulet van Levensabsorbtie
+item.charm.damageredirection.name=Amulet van Schadereflectie
+item.charm.magicpenetration.name=Amulet van Magische Doordringing
+item.charm.witcheryharm.name=Amulet van Hekserijschade
+item.charm.witcherydefense.name=Amulet van Hekserijbescherming
+item.charm.fallingprotection.name=Amulet van Valbescherming
+item.charm.haste.name=Amulet van Haastigheid
+item.charm.criticalstrike.name=Amulet van de Kritieke Treffer
+item.charm.seconddurability.name=Amulet van de Tweede Levensduur
+item.charm.voidrescue.name=Amulet van de Leegteredding
+item.charm.slaughterimpact.name=Amulet van de Slachtimpact
+item.charm.lastresort.tooltip=Teleporteert je $0 blokken weg van de laatste slag met een cooldown van $1 seconden
+item.charm.lastresort.name=Amulet van het Laatste Redmiddel
+item.charm.magicdefense.tooltip=-$0 magische schade incasseren
+item.charm.magicdefense.name=Amulet van Magieverdediging
+entity.louse.name=Luis
+container.charmPouch=Amulettenbuidel
+container.runeCrafting=Runeambacht
+item.charm.blockingrepulsion.tooltip=-$0 schade incasseren en $1x terugslag afstoten
+item.charm.blockingrepulsion.name=Amulet van Parerende Afstoting
+item.fireShard.name=Vuursplinter
+item.charm.basicpower.tooltip=+$0 schade
+item.charm.basicagility.tooltip=+$0 snelheid
+item.charm.basicvigor.tooltip=+$0 regeneratiesnelheid
+item.charm.basicdefense.tooltip=-$0 schade incasseren
+item.charm.basicmagic.tooltip=+$0 ervaring
+item.charm.equality.tooltip=+$0 schade\n+$1 snelheid\n+$2 regeneratiesnelheid\n-$3 schade incasseren\n+$4 ervaring
+item.charm.blocking.tooltip=-$0 schade incasseren wanneer je pareert
+item.charm.blockingreflection.tooltip=-$0 schade incasseren en $1 teruggeven wanneer je pareert
+item.charm.digestiverecover.tooltip=$0 genezing per 1 hongerbar
+item.charm.lifesteal.tooltip=$0 leven verkrijgen per $1 schade die je doet
+item.charm.damageredirection.tooltip=$0 schade doorsturen naar $1 nabij(e) wezen(s)
+item.charm.magicpenetration.tooltip=$0 van de gedane schade doordringt de tegenstanders bepantsering met behulp van magie
+item.charm.witcheryharm.tooltip=$0 kans om level $1 effect voor $2 seconden te veroorzaken
 item.charm.witcherydefense.tooltip=
-item.charm.fallingprotection.tooltip=+$0 blocks
-item.charm.haste.tooltip=+$0 dig speed
-item.charm.criticalstrike.tooltip=$0 chance to deal $1 critical damage
-item.charm.seconddurability.tooltip=$0 chance to recover $1 durability
+item.charm.fallingprotection.tooltip=+$0 blokken
+item.charm.haste.tooltip=+$0 graafsnelheid
+item.charm.criticalstrike.tooltip=$0 kans om $1 kritieke schade te doen
+item.charm.seconddurability.tooltip=$0 kans om $1 levensduur te herstellen
 item.charm.voidrescue.tooltip=
-item.charm.slaughterimpact.tooltip=$0 damage dealt in $1 radius on kill
-item.charm.cannotstack=This charm will not stack effects with other charms of this type!
-entity.hauntedMiner.name=Haunted Miner
+item.charm.slaughterimpact.tooltip=$0 schade doen in een radius van $1 wanneer je iets doodt
+item.charm.cannotstack=Dit amulet zal zijn effecten niet stapelen met andere amuletten van dit type!
+entity.hauntedMiner.name=Achtervolgde Mijnwerker
+tile.voidChest.name=Void Chest
+tile.endiumOre.name=Endium Ore
+tile.endiumBlock.name=Endium Block
+tile.persegrit.name=Persegrit
+tile.laboratoryGlass.name=Laboratory Glass
+item.endiumIngot.name=Endium Ingot
+item.knowledgeNote.name=Knowledge Note
+entity.homelandEnderman.name=Homeland Enderman
+energy.overlay.title=ENERGY CLUSTER
+energy.overlay.holding=HOLDING $ ENERGY
+energy.overlay.regen=REGENERATING UP TO $
+energy.status.healthy=HEALTHY
+energy.status.weakened=WEAKENED
+energy.status.tired=TIRED
+energy.status.unstable=UNSTABLE
+container.voidChest=Void Chest
+key.openCompendium=Ender Compendium
