--- a/src/main/resources/assets/hardcoreenderexpansion/lang/pt_PT.lang
+++ b/src/main/resources/assets/hardcoreenderexpansion/lang/pt_PT.lang
@@ -1,3 +1,4 @@
+# DO NOT MODIFY THIS FILE!
 tile.obsidianEnd.name=Obsidiana Decadente
 tile.obsidianStairs.name=Escadaria de Obsidiana
 tile.obsidianSpecial.smooth.name=Obsidiana Lisa
@@ -73,21 +74,20 @@ entity.forestGhost.name=Fantasma
 entity.fireGolem.name=Golem de Fogo
 entity.scorchingLens.name=Lentes Ardentes
 namegenerator.middle=, o
-achievement.magicOfDecomposition.desc=Acquire some Stardust
+achievement.magicOfDecomposition.desc=Adquira Alguma Poeira Estrelar
 challenge.hard0Deaths=Jogador HARDCORE!
 challenge.hard0Deaths.desc=Mate o Dragão sem morrer
 challenge.bedExplode=Insônia
 challenge.bedExplode.desc=De a última quantidade de dano usando a explosão de uma cama
-challenge.noEnderman=AmanteDoFim
+challenge.noEnderman=Amante Do Fim
 challenge.noEnderman.desc=Não mate nenhum Enderman durante a batalha
-achievement.learningThePowers=Learning the powers
-achievement.newAdventures.desc=Welcome to Hardcore Ender Expansion!
-achievement.newAdventures=Time for new adventures!
+achievement.learningThePowers=Aprendendo os Poderes
+achievement.newAdventures.desc=Bem-Vindo a "Hardcore Ender Expansion"!
+achievement.newAdventures=Hora para Novas Aventuras!
 challenge.title=Desafio:
 challenge.difficulty.hard=Dificuldade Difícil
 challenge.difficulty.mediumorhard=Dificuldade Difícil / Normal
 item.enderCompendium.name=Compendium do Ender
-item.knowledgeFragment.name=Fragmento de Conhecimento
 tile.decompositionTable.name=Mesa de Decomposição
 tile.energyExtractionTable.name=Mesa de Extração de Energia
 tile.ravagedBrick.name=Tijolo Devastado
@@ -96,94 +96,111 @@ item.spectralWand.name=Bastão Espectral
 container.enhancedBrewing=Estante de Fermentação Melhorada
 container.decompositionTable=Mesa de Desconstrução
 container.energyExtractionTable=Mesa de Extração de Energia
-tile.sphalerite.name=Sphalerite
-tile.sphalerite.stardust.name=Sphalerite with Stardust
-item.spatialDashGem.name=Spatial Dash Gem
-item.biomeCompass.name=Biome Compass
-achievement.magicOfDecomposition=The magic of decomposition
-achievement.wholeNewCultures.desc=Visit a Biome Island
-achievement.wholeNewCultures=Whole new cultures!
-achievement.thatWasClose.desc=Save yourself from falling into the void
-achievement.thatWasClose=That was close!
-achievement.deadVisionary.desc=Kill an Ender Eye to get Spatial Dash Gem
-achievement.deadVisionary=Dead visionary
+tile.sphalerite.name=Esfarelita
+tile.sphalerite.stardust.name=Esfarelita com Pó Estrelar
+item.spatialDashGem.name=Gema de Movimento Espacial
+item.biomeCompass.name=Bússola de Ilha
+achievement.magicOfDecomposition=A Mágica de Decomposição
+achievement.wholeNewCultures.desc=Visite uma Ilha de Bioma
+achievement.wholeNewCultures=Culturas Inteiramente Novas!
+achievement.thatWasClose.desc=Salve Você Mesmo de Cair no Vazio
+achievement.thatWasClose=Essa Foi Por Pouco!
+achievement.deadVisionary.desc=Mate um Olho do Fim para Obter uma Gema de Movimento Espacial
+achievement.deadVisionary=Visionário Morto
 achievement.superShiny.desc=Enhance and Ender Pearl with all possible items
-achievement.superShiny=Super shiny!
-achievement.traveling101.desc=Enhance an Ender Pearl
-achievement.traveling101=Traveling 101
-achievement.rebirth.desc=Use the Temple Caller and regenerate the End
-achievement.rebirth=Rebirth
-achievement.learningThePowers.desc=Create a Dragon Essence Altar
-item.endermanRelicShattered.name=Shattered Enderman Relic
-container.endPowderEnhancements=End Powder Enhancements
-achievement.theMoreYouKnow=The more you know
-achievement.theMoreYouKnow.desc=Craft an Ender Compendium
-tile.crossedDecoration.violetMoss.tall.name=Tall Violet Moss
-tile.crossedDecoration.violetMoss.moderate.name=Moderate Violet Moss
-tile.crossedDecoration.violetMoss.short.name=Short Violet Moss
-tile.ravagedBrickSmooth.name=Smooth Ravaged Brick
-tile.ravagedBrickGlow.name=Glowing Ravaged Brick
-tile.ravagedBrickSlab.name=Ravaged Brick Slab
-tile.ravagedBrickStairs.name=Ravaged Brick Stairs
-tile.ravagedBrickFence.name=Ravaged Brick Fence
-tile.cinder.name=Cinder
-item.scorchingPickaxe.name=Scorching Pickaxe
-item.charmPouch.name=Charm Pouch
-item.rune.power.name=Rune of Power
-item.rune.agility.name=Rune of Agility
-item.rune.vigor.name=Rune of Vigor
-item.rune.defense.name=Rune of Defense
-item.rune.magic.name=Rune of Magic
-item.rune.void.name=Rune of Void
-item.charm.basicpower.name=Charm of Power
-item.charm.basicagility.name=Charm of Agility
-item.charm.basicvigor.name=Charm of Vigor
-item.charm.basicdefense.name=Charm of Defense
-item.charm.basicmagic.name=Charm of Magic
-item.charm.equality.name=Charm of Equality
-item.charm.blocking.name=Charm of Blocking
-item.charm.blockingreflection.name=Charm of Blocking Reflection
-item.charm.digestiverecover.name=Charm of Digestive Recover
-item.charm.lifesteal.name=Charm of Life Steal
-item.charm.damageredirection.name=Charm of Damage Redirection
-item.charm.magicpenetration.name=Charm of Magic Penetration
-item.charm.witcheryharm.name=Charm of Witchery Harm
-item.charm.witcherydefense.name=Charm of Witchery Defense
-item.charm.fallingprotection.name=Charm of Falling Protection
-item.charm.haste.name=Charm of Haste
-item.charm.criticalstrike.name=Charm of Critical Strike
-item.charm.seconddurability.name=Charm of Second Durability
-item.charm.voidrescue.name=Charm of Void Rescue
-item.charm.slaughterimpact.name=Charm of Slaughter Impact
-item.charm.lastresort.tooltip=Teleports $0 blocks away from finishing hit with cooldown of $1 seconds
-item.charm.lastresort.name=Charm of Last Resort
-item.charm.magicdefense.tooltip=-$0 magic damage taken
-item.charm.magicdefense.name=Charm of Magic Defense
-entity.louse.name=Louse
-container.charmPouch=Charm Pouch
-container.runeCrafting=Rune Crafting
-item.charm.blockingrepulsion.tooltip=-$0 damage taken and $1x knockback repulsed
-item.charm.blockingrepulsion.name=Charm of Blocking Repulsion
-item.fireShard.name=Fire Shard
-item.charm.basicpower.tooltip=+$0 damage
-item.charm.basicagility.tooltip=+$0 speed
-item.charm.basicvigor.tooltip=+$0 health regeneration speed
-item.charm.basicdefense.tooltip=-$0 damage taken
-item.charm.basicmagic.tooltip=+$0 experience
-item.charm.equality.tooltip=+$0 damage\n+$1 speed\n+$2 health regeneration speed\n-$3 damage taken\n+$4 experience
-item.charm.blocking.tooltip=-$0 damage taken when blocking
-item.charm.blockingreflection.tooltip=-$0 damage taken and $1 reflected when blocking
-item.charm.digestiverecover.tooltip=$0 health per 1 hunger bar
-item.charm.lifesteal.tooltip=$0 health gained per $1 health dealt
-item.charm.damageredirection.tooltip=$0 damage redirected to $1 nearby creature(s)
-item.charm.magicpenetration.tooltip=$0 of dealt damage penetrates armor using magic
-item.charm.witcheryharm.tooltip=$0 chance to cause level $1 effect for $2 seconds
+achievement.superShiny=Super Brilhante!
+achievement.traveling101.desc=Melhore uma Pérola do Fim
+achievement.traveling101=Viajem 101
+achievement.rebirth.desc=Use o Chamador do Templo e Regenere o Fim
+achievement.rebirth=Renascer
+achievement.learningThePowers.desc=Crie um Altar de Essência do Dragão
+item.endermanRelicShattered.name=Fragmento de Relíquia de Enderman
+container.endPowderEnhancements=Melhorias em Pó do Fim
+achievement.theMoreYouKnow=Quanto Mais Você Sabe
+achievement.theMoreYouKnow.desc=Construa um Compêndio do Ender
+tile.crossedDecoration.violetMoss.tall.name=Musgo Violeta Alto
+tile.crossedDecoration.violetMoss.moderate.name=Musgo Violeta Médio
+tile.crossedDecoration.violetMoss.short.name=Musgo Violeta Curto
+tile.ravagedBrickSmooth.name=Tijolo Devastado Liso
+tile.ravagedBrickGlow.name=Tijolo Devastado Brilhante
+tile.ravagedBrickSlab.name=Lage de Tijolo Devastado
+tile.ravagedBrickStairs.name=Escada de Tijolo Devatado
+tile.ravagedBrickFence.name=Cerca de Tijolo Devastado
+tile.cinder.name=Cinza
+item.scorchingPickaxe.name=Picareta Ardente
+item.charmPouch.name=Bolsa de Amuleto
+item.rune.power.name=Runa de Poder
+item.rune.agility.name=Runa de Agilidade
+item.rune.vigor.name=Runa de Vigor
+item.rune.defense.name=Runa de Defesa
+item.rune.magic.name=Runa de Mágica
+item.rune.void.name=Runa de Vazio
+item.charm.basicpower.name=Amuleto de Poder
+item.charm.basicagility.name=Amuleto de Agilidade
+item.charm.basicvigor.name=Amuleto de Vigor
+item.charm.basicdefense.name=Amuleto de Defesa
+item.charm.basicmagic.name=Amuleto de Mágica
+item.charm.equality.name=Amuleto de Igualdade
+item.charm.blocking.name=Amuleto de Bloqueio
+item.charm.blockingreflection.name=Amuleto de Bloqueio Refletor
+item.charm.digestiverecover.name=Amuleto de Recuperação Digestiva
+item.charm.lifesteal.name=Amuleto de Roubo de Vida
+item.charm.damageredirection.name=Amuleto de Redirecionamento de Dano
+item.charm.magicpenetration.name=Amuleto de Penetração Mágica
+item.charm.witcheryharm.name=Amuleto de Feitiçaria de Dano
+item.charm.witcherydefense.name=Amuleto de Feitiçaria de Defesa
+item.charm.fallingprotection.name=Amuleto de Proteção Contra Queda
+item.charm.haste.name=Amuleto de Pressa
+item.charm.criticalstrike.name=Amuleto de Golpe Crítico
+item.charm.seconddurability.name=Amuleto de Segunda Durabilidade
+item.charm.voidrescue.name=Amuleto de Resgate do Vazio
+item.charm.slaughterimpact.name=Amuleto de Impacto de Massacre
+item.charm.lastresort.tooltip=Teleporta $0 Blocos de Distância do Golpe Final com Recarga de $1 Segundos
+item.charm.lastresort.name=Amuleto de Último Recurso
+item.charm.magicdefense.tooltip=-$0 Dano Mágico Recebido
+item.charm.magicdefense.name=Amuleto de Defesa Mágica
+entity.louse.name=Piolho
+container.charmPouch=Bolsa de Amuleto
+container.runeCrafting=Construindo Runa
+item.charm.blockingrepulsion.tooltip=-$0 Dano Recebido e $1x Repelido de volta
+item.charm.blockingrepulsion.name=Amuleto de Bloqueio Repulsor
+item.fireShard.name=Fragmento de Fogo
+item.charm.basicpower.tooltip=+$0 Dano
+item.charm.basicagility.tooltip=+$0 Velocidade
+item.charm.basicvigor.tooltip=+$0 Velocidade de Regeneração de Saúde
+item.charm.basicdefense.tooltip=-$0 Dano Recebido
+item.charm.basicmagic.tooltip=+$0 Experiência
+item.charm.equality.tooltip=+$0 Dano\n+$1 Velocidade\n+$2 Velocidade de Regeneração de Saúde\n-$3 Dano Recebido\n+$4 Esperiência
+item.charm.blocking.tooltip=+$0 Dano Recebido quando Bloqueia
+item.charm.blockingreflection.tooltip=-$0 Dano Recebido e $1 Refletido quando Bloqueado
+item.charm.digestiverecover.tooltip=$0 Saúde por 1 Barra de Fome
+item.charm.lifesteal.tooltip=$0 Saúde Ganha por $1 Saúde Causado
+item.charm.damageredirection.tooltip=$0 Dano redirecionado para $1 Criatura(s) próxima(s)
+item.charm.magicpenetration.tooltip=$0 de sofrer dano que penetre a armadura usando Mágica
+item.charm.witcheryharm.tooltip=$0 Chance de Causar Nível $1 de Efeito por Segundo
 item.charm.witcherydefense.tooltip=
-item.charm.fallingprotection.tooltip=+$0 blocks
-item.charm.haste.tooltip=+$0 dig speed
-item.charm.criticalstrike.tooltip=$0 chance to deal $1 critical damage
-item.charm.seconddurability.tooltip=$0 chance to recover $1 durability
+item.charm.fallingprotection.tooltip=+$0 Blocos
+item.charm.haste.tooltip=+$0 Velocidade de Cavar
+item.charm.criticalstrike.tooltip=$0 Chance de Dar $1 Dano Crítico
+item.charm.seconddurability.tooltip=$0 Chance de Recuperar $1 Durabilidade
 item.charm.voidrescue.tooltip=
-item.charm.slaughterimpact.tooltip=$0 damage dealt in $1 radius on kill
-item.charm.cannotstack=This charm will not stack effects with other charms of this type!
-entity.hauntedMiner.name=Haunted Miner
+item.charm.slaughterimpact.tooltip=$0 Dano Causado em $1 de Raio em Matar
+item.charm.cannotstack=Esse Feitiço não Acumula Efeito com Outros Feitiços deste Tipo!
+entity.hauntedMiner.name=Minerador Fantasma
+tile.voidChest.name=Void Chest
+tile.endiumOre.name=Endium Ore
+tile.endiumBlock.name=Endium Block
+tile.persegrit.name=Persegrit
+tile.laboratoryGlass.name=Laboratory Glass
+item.endiumIngot.name=Endium Ingot
+item.knowledgeNote.name=Knowledge Note
+entity.homelandEnderman.name=Homeland Enderman
+energy.overlay.title=ENERGY CLUSTER
+energy.overlay.holding=HOLDING $ ENERGY
+energy.overlay.regen=REGENERATING UP TO $
+energy.status.healthy=HEALTHY
+energy.status.weakened=WEAKENED
+energy.status.tired=TIRED
+energy.status.unstable=UNSTABLE
+container.voidChest=Void Chest
+key.openCompendium=Ender Compendium
