--- a/src/main/resources/assets/hardcoreenderexpansion/lang/ru_RU.lang
+++ b/src/main/resources/assets/hardcoreenderexpansion/lang/ru_RU.lang
@@ -1,3 +1,4 @@
+# DO NOT MODIFY THIS FILE!
 tile.obsidianEnd.name=Падающий обсидиан
 tile.obsidianStairs.name=Обсидиановые ступеньки
 tile.obsidianSpecial.smooth.name=Гладкий обсидиан
@@ -87,7 +88,6 @@ challenge.title=Испытание:
 challenge.difficulty.hard=Тяжёлая сложность
 challenge.difficulty.mediumorhard=Нормальная / тяжёлая сложность
 item.enderCompendium.name=Компендиум Края
-item.knowledgeFragment.name=Фрагмент знаний
 tile.decompositionTable.name=Стол разложения
 tile.energyExtractionTable.name=Стол извлечения энергии
 tile.ravagedBrick.name=Разрушенный кирпич
@@ -187,3 +187,20 @@ item.charm.voidrescue.tooltip=
 item.charm.slaughterimpact.tooltip=$0 damage dealt in $1 radius on kill
 item.charm.cannotstack=This charm will not stack effects with other charms of this type!
 entity.hauntedMiner.name=Haunted Miner
+tile.voidChest.name=Void Chest
+tile.endiumOre.name=Endium Ore
+tile.endiumBlock.name=Endium Block
+tile.persegrit.name=Persegrit
+tile.laboratoryGlass.name=Laboratory Glass
+item.endiumIngot.name=Endium Ingot
+item.knowledgeNote.name=Knowledge Note
+entity.homelandEnderman.name=Homeland Enderman
+energy.overlay.title=ENERGY CLUSTER
+energy.overlay.holding=HOLDING $ ENERGY
+energy.overlay.regen=REGENERATING UP TO $
+energy.status.healthy=HEALTHY
+energy.status.weakened=WEAKENED
+energy.status.tired=TIRED
+energy.status.unstable=UNSTABLE
+container.voidChest=Void Chest
+key.openCompendium=Ender Compendium
