--- a/src/main/resources/assets/hardcoreenderexpansion/lang/zh_TW.lang
+++ b/src/main/resources/assets/hardcoreenderexpansion/lang/zh_TW.lang
@@ -1,3 +1,4 @@
+# DO NOT MODIFY THIS FILE!
 tile.obsidianEnd.name=黑曜石
 tile.obsidianStairs.name=黑曜石樓梯
 tile.obsidianSpecial.smooth.name=平滑黑曜石
@@ -87,7 +88,6 @@ challenge.title=挑戰:
 challenge.difficulty.hard=困難難度
 challenge.difficulty.mediumorhard=標準/困難難度
 item.enderCompendium.name=末地手冊
-item.knowledgeFragment.name=學識碎片
 tile.decompositionTable.name=分解台
 tile.energyExtractionTable.name=能量提取台
 tile.ravagedBrick.name=毀滅磚塊
@@ -187,3 +187,20 @@ item.charm.voidrescue.tooltip=
 item.charm.slaughterimpact.tooltip=$0 damage dealt in $1 radius on kill
 item.charm.cannotstack=This charm will not stack effects with other charms of this type!
 entity.hauntedMiner.name=Haunted Miner
+tile.voidChest.name=Void Chest
+tile.endiumOre.name=Endium Ore
+tile.endiumBlock.name=Endium Block
+tile.persegrit.name=Persegrit
+tile.laboratoryGlass.name=Laboratory Glass
+item.endiumIngot.name=Endium Ingot
+item.knowledgeNote.name=Knowledge Note
+entity.homelandEnderman.name=Homeland Enderman
+energy.overlay.title=ENERGY CLUSTER
+energy.overlay.holding=HOLDING $ ENERGY
+energy.overlay.regen=REGENERATING UP TO $
+energy.status.healthy=HEALTHY
+energy.status.weakened=WEAKENED
+energy.status.tired=TIRED
+energy.status.unstable=UNSTABLE
+container.voidChest=Void Chest
+key.openCompendium=Ender Compendium
