--- a/src/main/resources/assets/hardcoreenderexpansion/lang/da_DK.lang
+++ b/src/main/resources/assets/hardcoreenderexpansion/lang/da_DK.lang
@@ -1,3 +1,4 @@
+# DO NOT MODIFY THIS FILE!
 tile.obsidianEnd.name=Obsidian
 tile.obsidianStairs.name=Obsidiantrappe
 tile.obsidianSpecial.smooth.name=Glat obsidian
@@ -87,7 +88,6 @@ challenge.title=Udfordring:
 challenge.difficulty.hard=Svær sværhedsgrad
 challenge.difficulty.mediumorhard=Normal / Hard difficulty
 item.enderCompendium.name=Ender kompendie
-item.knowledgeFragment.name=Videns fragment
 tile.decompositionTable.name=Decomposition Table
 tile.energyExtractionTable.name=Energy Extraction Table
 tile.ravagedBrick.name=Ravaged Brick
@@ -117,7 +117,7 @@ achievement.learningThePowers.desc=Create a Dragon Essence Altar
 item.endermanRelicShattered.name=Shattered Enderman Relic
 container.endPowderEnhancements=End Powder Enhancements
 achievement.theMoreYouKnow=The more you know
-achievement.theMoreYouKnow.desc=Craft an Ender Compendium
+achievement.theMoreYouKnow.desc=Press '%1$s' to open Ender Compendium
 tile.crossedDecoration.violetMoss.tall.name=Tall Violet Moss
 tile.crossedDecoration.violetMoss.moderate.name=Moderate Violet Moss
 tile.crossedDecoration.violetMoss.short.name=Short Violet Moss
@@ -187,3 +187,20 @@ item.charm.voidrescue.tooltip=
 item.charm.slaughterimpact.tooltip=$0 damage dealt in $1 radius on kill
 item.charm.cannotstack=This charm will not stack effects with other charms of this type!
 entity.hauntedMiner.name=Haunted Miner
+tile.voidChest.name=Void Chest
+tile.endiumOre.name=Endium Ore
+tile.endiumBlock.name=Endium Block
+tile.persegrit.name=Persegrit
+tile.laboratoryGlass.name=Laboratory Glass
+item.endiumIngot.name=Endium Ingot
+item.knowledgeNote.name=Knowledge Note
+entity.homelandEnderman.name=Homeland Enderman
+energy.overlay.title=ENERGY CLUSTER
+energy.overlay.holding=HOLDING $ ENERGY
+energy.overlay.regen=REGENERATING UP TO $
+energy.status.healthy=HEALTHY
+energy.status.weakened=WEAKENED
+energy.status.tired=TIRED
+energy.status.unstable=UNSTABLE
+container.voidChest=Void Chest
+key.openCompendium=Ender Compendium
