Ghost Amulet (Impure)

--- a/src/main/resources/assets/hardcoreenderexpansion/lang/en_US.lang
+++ b/src/main/resources/assets/hardcoreenderexpansion/lang/en_US.lang
@@ -76,6 +76,7 @@ item.silverfishBlood.name=Silverfish Blood
 item.drySplinter.name=Dry Splinter
 item.infestationRemedy.name=Infestation Remedy
 item.ghostAmulet.name=Ghost Amulet
+item.ghostAmulet.impure.name=Ghost Amulet (Impure)
 item.endoplasm.name=Ectoplasm
 item.corporealMirageOrb.name=Corporeal Mirage Orb
 item.bucketEnderGoo.name=Ender Goo Bucket
