--- a/src/main/resources/assets/hardcoreenderexpansion/lang/en_US.lang
+++ b/src/main/resources/assets/hardcoreenderexpansion/lang/en_US.lang
@@ -54,6 +54,7 @@ tile.dungeonPuzzle.wallLit.name=Dungeon Puzzle (Lit Wall)
 tile.energyCluster.name=Energy Cluster
 tile.cinder.name=Cinder
 tile.persegrit.name=Persegrit
+tile.laboratoryObsidian.name=Laboratory Obsidian
 tile.laboratoryFloor.name=Laboratory Floor
 tile.laboratoryStairs.name=Laboratory Stairs
 tile.laboratoryGlass.name=Laboratory Glass
