Some lab designs, violet moss gen

--- a/src/main/resources/assets/hardcoreenderexpansion/lang/en_US.lang
+++ b/src/main/resources/assets/hardcoreenderexpansion/lang/en_US.lang
@@ -88,6 +88,7 @@ item.knowledgeNote.name=Knowledge Note
 item.enhancedBrewingStand.name=Enhanced Brewing Stand
 item.scorchingPickaxe.name=Scorching Pickaxe
 item.fireShard.name=Fire Shard
+item.energyWand.name=Energy Wand
 item.charmPouch.name=Charm Pouch
 item.rune.power.name=Rune of Power
 item.rune.agility.name=Rune of Agility
